--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
 
         <section id="product1" class="section-p1">
             <div class="pro-container">
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -52,7 +52,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f2.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -68,7 +68,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f3.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -84,7 +84,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f4.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -100,7 +100,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f5.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -116,7 +116,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f6.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -132,7 +132,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f7.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -148,7 +148,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/f8.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -165,7 +165,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
 
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -181,7 +181,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n2.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -197,7 +197,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n3.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -213,7 +213,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n4.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -229,7 +229,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n5.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -245,7 +245,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n6.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -261,7 +261,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n7.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
@@ -277,7 +277,7 @@
                     </div>
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='sproduct.html'">
                     <img src="img/products/n8.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
