--- a/sproduct.html
+++ b/sproduct.html
@@ -59,8 +59,8 @@
                     <option>Large</option>
                 </select>
                 <input type="number" value="1">
-                <button>Add To Cart</button>
-                <h4></h4>
+                <button class="normal">Add To Cart</button>
+                <h4>Product Details</h4>
                 <span>The Glidan Ultra Cotton T-Shirt is made from a substantial 6.0 oz. per
                     sq. yd. fabric constructed from 100% cotton, this classic fit preshrunk jersey 
                     knit provides unmatched comfort with each wear . Featuring a taped nect and 
@@ -68,6 +68,75 @@
                     colors, it offers it all in the ultimate head-turning package.
                 </span>
             </div>
+        </section>
+        <section id="product1" class="section-p1">
+            <h2>Featured Products</h2>
+            <p>Summer Collection New Model Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/products/n1.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n2.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n3.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/products/n4.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirt</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                </div>
         </section>
 
         <section id="newsletter" class="section-p1 section-m1">
@@ -133,6 +202,24 @@
                 <p>© 2022, Tech2 etc - HTML CSS Ecommerce Template</p>
             </div>
         </footer>
+
+        <script>
+            var Mainimg = document.getElementById("mainImg");
+            var smallimg =  document.getElementsByClassName("small-img");
+
+            smallimg[0].onclick = function(){
+                Mainimg.src = smallimg[0].src;
+            }
+            smallimg[1].onclick = function(){
+                Mainimg.src = smallimg[1].src;
+            }
+            smallimg[2].onclick = function(){
+                Mainimg.src = smallimg[2].src;
+            }
+            smallimg[3].onclick = function(){
+                Mainimg.src = smallimg[3].src;
+            }
+        </script>
 
 
 
