--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
             <div>
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="shop.html">Shop</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a  href="shop.html">Shop</a></li>
+                    <li><a class="active" href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fa fa-truck" aria-hidden="true"></i>
@@ -29,9 +29,77 @@
             </div>
         </section>
 
-        <section id="page-header">
-            <h2>#Stayhome</h2>
-            <p>Save more with cupons & up to 70% off!</p>
+        <section id="page-header" class="blog-header">
+            <h2>#readmore</h2>
+            <p>Read all case studies about our products!</p>
+        </section>
+
+        <section id="blog">
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b1.jpg" alt="">
+                </div>
+                <div class="bolg-details">
+                    <h4>The Cotton-Jersy Zip-Up Hoodie</h4>
+                    <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies Your
+                        wolf chartreuse hexagon irony, godard..
+                    </p>
+                    <a href="">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b2.jpg" alt="">
+                </div>
+                <div class="bolg-details">
+                    <h4>How to Style a Quiff</h4>
+                    <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies Your
+                        wolf chartreuse hexagon irony, godard..
+                    </p>
+                    <a href="">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b3.jpg" alt="">
+                </div>
+                <div class="bolg-details">
+                    <h4>Must-Have Skater Girl Items</h4>
+                    <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies Your
+                        wolf chartreuse hexagon irony, godard..
+                    </p>
+                    <a href="">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b4.jpg" alt="">
+                </div>
+                <div class="bolg-details">
+                    <h4>Runway-Inspired Trends</h4>
+                    <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies Your
+                        wolf chartreuse hexagon irony, godard..
+                    </p>
+                    <a href="">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="img/blog/b6.jpg" alt="">
+                </div>
+                <div class="bolg-details">
+                    <h4>AW20 Menswear Trends</h4>
+                    <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies Your
+                        wolf chartreuse hexagon irony, godard..
+                    </p>
+                    <a href="">CONTINUE READING</a>
+                </div>
+                <h1>13/01</h1>
+            </div>
         </section>
      
         <section id="pagination" class="section-p1">
